--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "mustache-express": "^1.3.2",
     "nodemon": "^3.0.2"
   }
 }
